halfway of tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
 
-# Created by https://www.gitignore.io/api/osx,venv,linux,macos,python,windows,virtualenv,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=osx,venv,linux,macos,python,windows,virtualenv,visualstudiocode
+data/
+
+# Created by https://www.gitignore.io/api/osx,venv,linux,macos,python,windows,virtualenv,jupyternotebooks,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=osx,venv,linux,macos,python,windows,virtualenv,jupyternotebooks,visualstudiocode
+
+### JupyterNotebooks ###
+# gitignore template for Jupyter Notebooks
+# website: http://jupyter.org/
+
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Remove previous ipynb_checkpoints
+#   git rm -r .ipynb_checkpoints/
 
 ### Linux ###
 *~
@@ -218,4 +234,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/osx,venv,linux,macos,python,windows,virtualenv,visualstudiocode
+# End of https://www.gitignore.io/api/osx,venv,linux,macos,python,windows,virtualenv,jupyternotebooks,visualstudiocode
