--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 data/
+runs/
 
 # Created by https://www.gitignore.io/api/osx,venv,linux,macos,python,windows,virtualenv,jupyternotebooks,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=osx,venv,linux,macos,python,windows,virtualenv,jupyternotebooks,visualstudiocode
